--- a/src/client/app/App.css
+++ b/src/client/app/App.css
@@ -5,49 +5,29 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282C34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body { 
+  display:flex; 
+  flex-direction:column; 
 }
 
 h1 {
   font-family: 'Bigelow Rules';
-  font-size: 72px;
+  font-size: 30px;
   background-color: #222252;
   color: #f5f5f5;
+  padding:0.5em !important;
 }
 
-.App-link {
-  color: #61DAFB;
+.footerText {
+  margin-top: 0.1em !important;
 }
 
 .footer {
-  padding: 0 2em;
-  margin-top: 5px;
+  margin-top: 5px; 
   color: #ffffff;
   background-color:#222252;
-  text-align: center;
-  /* height: 2em;
-  line-height: 2em;  */
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  text-align: center; 
+  bottom: 0; 
+  width: 100%;
+  height: 50px;
 }
