--- a/src/client/app/components/movie-list/movie-list.styles.css
+++ b/src/client/app/components/movie-list/movie-list.styles.css
@@ -5,3 +5,10 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
 }
+
+@media screen and (max-width: 600px) {
+    .movie-list {
+        display:flex;
+        flex-direction: column;
+    }
+}
