--- a/src/client/app/components/movie/movie.styles.css
+++ b/src/client/app/components/movie/movie.styles.css
@@ -6,6 +6,7 @@
     border-radius: 5px;
     padding: 25px;
     cursor: pointer;
+    margin-bottom: 0.2em !important;
     -moz-osx-font-smoothing: grayscale;
     backface-visibility: hidden;
     transform: translateZ(0);
