--- a/src/client/app/components/search-box/search-box.styles.css
+++ b/src/client/app/components/search-box/search-box.styles.css
@@ -1,9 +1,14 @@
 .search {
     -webkit-appearance: none;
-    border: 1px solid #222252;
     outline: none;
     padding: 10px;
-    width: 150px;
+    justify-content: center;
+    font-size:20px;
     line-height: 30px;
     margin-bottom:30px;
+}
+
+.ui.input > input {
+    border-radius:2rem;
+    font-size:20px;
 }
